@@ -40,5 +40,6 @@ sc8pr 2.2.dev...
 ** Fix minor bug with 'Sketch.caption' getter
 *** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
 *** Add 'sprite.onreset' event, called by 'sprite.ondraw'
+*** Add 'Video.splice'
 
 !!! Add 'util.borderRadius'
